Updated the design to move numbers to the right.  Fixed layout issues on comments/posts/etc

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -10,6 +10,10 @@ body {
 .div-filler {
     min-height: 20px;
 }
+
+.italics {
+    font-style: italic;
+}
 #menu{
     margin-bottom: 20px;
     /*position: static;*/
@@ -43,17 +47,15 @@ body {
 }
 .news-item {
     margin: 5px 0;
-    border-bottom: 1px solid #f5f5f5;
+    border-bottom: 1px solid #ddd;
     position: relative;
 }
 .arrow-up {
     display: block;
-    float: right;
     font-size: 1.2em;
 }
 .arrow-down {
     display: block;
-    float: right;
     font-size: 1.2em;
     
 }
@@ -70,16 +72,13 @@ body {
 }
 .comment-arrows .arrow-up,
 .comment-arrows .arrow-down {
-    float: left;
     clear: both;
 }
 
 .comment  .arrow-up {
-    float: left;
 }
 
 .comment  .arrow-down {
-    float: left;
 }
 
 .comment-arrow {
@@ -96,20 +95,22 @@ body {
 
 }
 .news-num {
-    float: left;
+    position: absolute;
+    top: 0;
+    right: 0;
     display: block;
     font-weight: 700;
-    color: #ddd;
+    color: #ebebeb;
     font-size: 34px;
     line-height: 34px;
-    text-shadow: 1px 1px #eee, -1px -1px #aaa;
+    text-shadow: 1px 1px #fff, -1px -1px #bbb;
 }
 .news-item-link {
-    margin-left: 54px;
+    margin-left: 32px;
 }
 .news-item-info {
     font-size: 12px;
-    margin-left: 54px;
+    margin-left: 32px;
 }
 
 .news-item-info span {
@@ -120,13 +121,17 @@ body {
     padding-top: 5px;
 }
 
+.comment-main {
+    margin-left: -15px;
+}
+
 .comment-block {
     margin-left: 15px;
+    border-left: solid 1px #ddd;
 }
 .comment {
     margin: 10px;
-    border-bottom: solid 1px #eee;
-    border-left: solid 1px #eee;
+    
     padding: 0 5px 5px 5px;
 }
 .comment-head {
